Add edit child functionality